--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
-forgeVersion=1.8.9-11.15.1.1722
-mcpVersion=stable_22
-org.gradle.jvmargs=-Xmx2048m
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.configureoncommand=true
+org.gradle.parallel.threads=4
+org.gradle.jvmargs=-Xmx5G
