--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ plugins {
     id "net.minecraftforge.gradle.forge" version "2.0.2"
 }
 */
-version = "6.5"
+version = "6.5.1"
 group = "club.sk1er" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "Levelhead"
 
@@ -86,6 +86,8 @@ processResources
 
 jar {
     manifest {
-        attributes "FMLCorePlugin": "club.sk1er.mods.levelhead.forge.FMLLoadingPlugin", "ModSide": "CLIENT"
+        attributes "FMLCorePlugin": "club.sk1er.mods.levelhead.forge.FMLLoadingPlugin",
+                "ModSide": "CLIENT",
+                "FMLCorePluginContainsFMLMod": "Yes, yes it does"
     }
 }
