--- a/build.gradle
+++ b/build.gradle
@@ -19,9 +19,9 @@ plugins {
     id "net.minecraftforge.gradle.forge" version "2.0.2"
 }
 */
-version = "6.5"
+version = "6.5.2"
 group = "club.sk1er" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "Sk1er Levelhead (1.8.9)"
+archivesBaseName = "Levelhead"
 
 sourceCompatibility = targetCompatibility = 1.8
 compileJava.options.encoding = 'UTF-8'
