--- a/build.gradle
+++ b/build.gradle
@@ -14,14 +14,8 @@ buildscript {
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-/*
-// for people who want stable - not yet functional for MC 1.8.8 - we require the forgegradle 2.1 snapshot
-plugins {
-    id "net.minecraftforge.gradle.forge" version "2.0.2"
-}
-*/
-version = "7.1"
-group = "club.sk1er" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+version = "7.1.1"
+group = "club.sk1er"
 archivesBaseName = "Levelhead"
 
 sourceCompatibility = targetCompatibility = 1.8
@@ -30,14 +24,8 @@ compileJava.options.encoding = 'UTF-8'
 minecraft {
     version = "1.8.9-11.15.1.2318-1.8.9"
     runDir = "run"
-
-    // the mappings can be changed at any time, and must be in the following format.
-    // snapshot_YYYYMMDD   snapshot are built nightly.
-    // stable_#            stables are built at the discretion of the MCP team.
-    // Use non-default mappings at your own risk. they may not allways work.
-    // simply re-run your setup task after changing the mappings to update your workspace.
     mappings = "stable_22"
-    makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+    makeObfSourceJar = false
 
 }
 
