--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,11 @@
+modGroup=club.sk1er
+modVersion=1.4
+modBaseName=ScrollableTooltips
+forgeVersion=1.8.9-11.15.1.2318-1.8.9
+mcpVersion=stable_22
+
 org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.configureoncommand=true
 org.gradle.parallel.threads=4
-org.gradle.jvmargs=-Xmx5G
+org.gradle.jvmargs=-Xmx8G
