--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 modGroup=club.sk1er
 modVersion=1.4
-modBaseName=ScrollableTooltips
+modBaseName=Levelhead
 forgeVersion=1.8.9-11.15.1.2318-1.8.9
 mcpVersion=stable_22
 
