Don't embed mixin

--- a/build.gradle
+++ b/build.gradle
@@ -315,7 +315,7 @@ dependencies {
     implementation("club.sk1er:ModCore:626-${mcVersion}-SNAPSHOT") {
 //        exclude module: "Vigilance"
     }
-    embed("net.modcore:Loader:1.4")
+    embed("net.modcore:Loader:1.5")
 
     implementation("com.github.Sk1erLLC:HookInjection:b9ac92c31e") {
         exclude module: "koffee"
@@ -343,7 +343,7 @@ dependencies {
     if (mcVersion == 11502) {
         minecraft 'net.minecraftforge:forge:1.15.2-31.1.18'
     }
-    if (!FABRIC) {
+    if (!FABRIC && useMixin) {
         annotationProcessor 'org.spongepowered:mixin:0.8'
         embed('org.spongepowered:mixin:0.7.11-SNAPSHOT') {
             exclude module: 'launchwrapper'
