--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,3 @@
-// For those who want the bleeding edge
 buildscript {
     def mcVersion
     def (major, minor, patch) = project.name.tokenize('-')[0].tokenize('.')
@@ -12,31 +11,13 @@ buildscript {
     project.ext.forge = forge
 
     repositories {
-        jcenter()
         mavenCentral()
-        maven {
-            name = "fabric"
-            url = "https://maven.fabricmc.net/"
-        }
-        if (!fabric) {
-            maven {
-                name = "forge"
-                url = "https://files.minecraftforge.net/maven"
-            }
-        }
-        maven {
-            name = "sonatype"
-            url = "https://oss.sonatype.org/content/repositories/snapshots/"
-        }
+        maven { url "https://maven.fabricmc.net/" }
+        if (!fabric) maven { url "https://files.minecraftforge.net/maven" }
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url 'https://jitpack.io' }
-        maven {
-            url = "https://repo.sk1er.club/repository/maven-public"
-        }
-        maven {
-            name = 'sponge'
-            url = 'https://repo.spongepowered.org/maven'
-        }
-
+        maven { url "https://repo.sk1er.club/repository/maven-public" }
+        maven { url 'https://repo.spongepowered.org/maven' }
     }
 
     dependencies {
@@ -50,30 +31,22 @@ buildscript {
         } else if (mcVersion >= 10800) {
             classpath 'org.spongepowered:mixingradle:0.6-SNAPSHOT'
             classpath('com.github.ReplayMod:ForgeGradle:' + (
-                    mcVersion >= 11200 ? '2817481' : // FG 2.3
-                            mcVersion >= 10904 ? '5bb7a53' : // FG 2.2
-                                    'dcfe5a56'   // FG 2.1
+                    mcVersion >= 11200 ? '541e148' : // FG 2.3
+                            mcVersion >= 10904 ? '5c1f53d' : // FG 2.2
+                                    '48c4f0c'   // FG 2.1
             ) + ':all')
         } else {
             classpath 'org.spongepowered:mixingradle:0.6-SNAPSHOT'
-            classpath 'com.github.ReplayMod:ForgeGradle:e93f77b4' // FG 1.2
+            classpath 'com.github.ReplayMod:ForgeGradle:a8a9e0ca' // FG 1.2
         }
     }
 }
-def kotlin_version = "1.3.72"
+
 def useMixin = false
 apply plugin: 'kotlin'
 
 repositories {
     mavenCentral()
-    jcenter()
-    maven {
-        name = "kryonet"
-        url = "http://clojars.org/repo/"
-    }
-    maven {
-        url 'https://repository.apache.org/content/repositories/releases/org/apache/xmlgraphics/'
-    }
     maven { url 'https://jitpack.io' }
     maven { url "https://repo.sk1er.club/repository/maven-public" }
     maven {
@@ -83,10 +56,7 @@ repositories {
         }
         url "https://repo.sk1er.club/repository/maven-private"
     }
-    maven {
-        name = 'sponge'
-        url = 'https://repo.spongepowered.org/maven'
-    }
+    maven { url 'https://repo.spongepowered.org/maven' }
 }
 def FABRIC = fabric
 def VANILLA = vanilla
@@ -307,33 +277,10 @@ dependencies {
         ][mcVersion]
     }
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation("org.jetbrains.kotlin:kotlin-reflect:$kotlin_version") {
-        exclude module: "kotlin-stdlib"
+    implementation("net.modcore:ModCore:815-${mcVersion}-SNAPSHOT") {
+        exclude module: 'WaifUPnP'
     }
-
-    implementation("club.sk1er:ModCore:626-${mcVersion}-SNAPSHOT") {
-//        exclude module: "Vigilance"
-    }
-    embed("net.modcore:Loader:1.5")
-
-    implementation("com.github.Sk1erLLC:HookInjection:b9ac92c31e") {
-        exclude module: "koffee"
-        exclude module: "kotlin-reflect"
-        exclude module: "kotlin-stdlib-jdk8"
-        exclude module: "asm-debug-all"
-    }
-
-    implementation('com.github.half-cambodian-hacker-man:Koffee:d8cee73') {
-        exclude module: 'asm-commons'
-        exclude module: 'asm-tree'
-        exclude module: 'asm'
-    }
-
-    implementation('org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7') {
-        exclude module: "kotlin-stdlib-common"
-        exclude module: "kotlin-stdlib"
-    }
+    embed("net.modcore:Loader:2.0.0")
 
     // FG already adds this even though it is not available at runtime, so we need to manually list it to bundle it
     if (VANILLA) {
@@ -464,14 +411,6 @@ jar {
                     "TweakOrder": "0"
         }
     }
-}
-
-compileKotlin {
-//    kotlinOptions {
-//        languageVersion = "1.4"
-//        useIR = true
-//        jvmTarget = "1.8"
-//    }
 }
 
 publishing {
