fix: possibly resolve config corruption fix: use a set for safe players & entities instead of list change: migrate to an actual mod annotation instead of mod container fix: resolve crash with changing levelhead colors

--- a/build.gradle
+++ b/build.gradle
@@ -221,6 +221,8 @@ minecraft {
             }
         }
     }
+    clientRunArgs += ["--tweakClass=gg.essential.loader.stage0.EssentialSetupTweaker"]
+    clientJvmArgs += ["-Dfml.coreMods.load=club.sk1er.mods.levelhead.forge.FMLLoadingPlugin"]
 }
 
 configurations {
@@ -278,7 +280,7 @@ dependencies {
     }
 
     embed "gg.essential:loader-launchwrapper:1.0.2"
-    implementation "gg.essential:Essential:1149-${mcVersion}-SNAPSHOT"
+    implementation "gg.essential:Essential:1207-${mcVersion}-SNAPSHOT"
 
     // FG already adds this even though it is not available at runtime, so we need to manually list it to bundle it
     if (VANILLA) {
