LevelheadGUI: Rewrite GUI to use Essential Theming

--- a/build.gradle
+++ b/build.gradle
@@ -282,7 +282,7 @@ dependencies {
     }
 
     embed "gg.essential:loader-launchwrapper:1.0.2"
-    implementation "gg.essential:essential-${mcVersionStr}-forge:1289"
+    implementation "gg.essential:essential-${mcVersionStr}-forge:1441+release-launch"
 
     // FG already adds this even though it is not available at runtime, so we need to manually list it to bundle it
     if (VANILLA) {
