--- a/build.gradle
+++ b/build.gradle
@@ -282,7 +282,7 @@ dependencies {
     }
 
     embed "gg.essential:loader-launchwrapper:1.1.2"
-    implementation "gg.essential:essential-${mcVersionStr}-forge:1626+release-launch"
+    implementation "gg.essential:essential-${mcVersionStr}-forge:1684+release-1.1-phase1"
 
     embed("com.squareup.okhttp3:okhttp:3.14.9")
 
