--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 modGroup=club.sk1er
 modBaseName=Levelhead
-BUILD_ID=8.0.0-B3
+BUILD_ID=8.0.0-RC1
 
 org.gradle.daemon=true
 org.gradle.parallel=true
